* Improved the command-line utility, allowing it to specify custom information
  in the output. Implemented better error checking on command-line arguments.
* Removed the facets() routine, since this has been superseded by the new
  output_...() routines. This also rendered some functions in the neighbor_none
  and neighbor_track classes obsolete, and they have also been removed.
* Updated Doxyfile to version 1.5.9

Version 0.2.7 (March 25, 2009)
==============================
* Added some missing cstdlib and cstring header files that cause compilation
  errors on some systems
* Some text cleanups in the main README file and cmd_line.cc
* The worklist_gen.pl script was in DOS format. It has been switched to Unix
  format to match the rest of the code.
* Fixed some incorrect inequalities in degenerate2.cc
* Improved some error messages in container.cc

Version 0.2.6 (March 23, 2009)
==============================
* Significantly improved the error messages generated by the code. It now
  makes use of the exit() routine rather than throwing errors, and it returns
  various status codes (defined in config.hh) for different types of abnormal
  behavior.
* Changed two occurences of "cin" to "cout" in the draw_particles routines
* Corrected error in comment in the tetrahedron example
* Minor comment cleanups of the worklist_gen.pl script
* Updated Doxyfile to version 1.5.8
* Added a routine print_facet_information() in response to a problem
  from Hengxing Lan
* Many of the cell based statistics routines (like number_of_faces() and
  facets()) internally track their progress by temporarily flipping the edge
  table entries to negative values, so that they know where they have already
  been. The common code that was used at the end of each of these functions for
  resetting the edges back to positive has now been made into a private inline
  function called reset_edges().
* Fixed a missing initialization of max_radius to zero in the radius_poly